--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 #header{
   width: 100%;
   height: 100vh;
-  background-image: url(homepic.png);
+  background-image: url(img/homepic.png);
   background-size: cover;
   background-position: center;
 }
