--- a/style.css
+++ b/style.css
@@ -146,7 +146,8 @@ nav ul li a:hover::after{
 }
 .project-list{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+  grid-template-columns: repeat(3,1fr);
   grid-gap: 40px;
   margin-top: 50px;
 }
@@ -154,9 +155,11 @@ nav ul li a:hover::after{
   border-radius: 10px;
   position: relative;
   overflow: hidden;
+  /* margin: auto; */
+  margin-top: 1.5rem;
 }
 .work img{
-  width: 30%;
+  width: 100%;
   border-radius: 10px;
   display: block;
   transition: transform 0.5s ;
@@ -165,7 +168,7 @@ nav ul li a:hover::after{
   transform:scale(1.1) ;
 }
 .layer{
-  width: 31.8%;
+  width: 100%;
   height: 0;
   background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
   border-radius: 10px;
@@ -188,7 +191,7 @@ nav ul li a:hover::after{
 #link-icon{
   width: 30px;
   display: flex;
-  margin: 15px 150px;
+  margin: 15px 220px;
 }
 .layer h3{
   font-weight: 5000;
@@ -283,7 +286,7 @@ form.btn2{
 /*-------------------------for small screen--------------*/
 @media only screen and (max-width: 600px){
   #header{
-    background-image: url(phone.png);
+    background-image: url(img/phone.png);
   }
   .header-text{
     margin-bottom: 100%;
@@ -339,12 +342,21 @@ form.btn2{
     font-size: 20px;
     margin-top: 10px;
   }
+
+  .project-list{
+    display: grid;
+    /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+    grid-template-columns: repeat(1,1fr);
+    grid-gap: 40px;
+    margin-top: 50px;
+  }
+
   .work img{
-    width: 500px;
+    width: 400px;
     height: 50vh;
   }
   .layer{
-    width: 350px;
+    width: 100%;
     height: 0px;
   }
   .work:hover .layer{
